--- a/home.css
+++ b/home.css
@@ -1,23 +1,64 @@
 body{
     background-color: lightgoldenrodyellow;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 #title-block {
+    display: flex;
+    justify-content: space-between;
+    justify-content: baseline;
     background-color: green;
     color: red;
+    margin-top: 1rem;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
 
+}
+button{
+    margin-top: 25px;
 }
 
 #nav-bar {
+    justify-content: space-between;
     background-color: lightgrey;
+    height: 50px;
 }
 ol{
     list-style-type: none;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
 }
 ul{
     list-style-type: none;
+    display: flex;
+    justify-content: space-between;
 }
 
 p{
     background-color: antiquewhite;
+    height: 100px;
+    text-align: justify;
+    padding: 5px;
+    margin: 100px 200px;
 }
+.nav-div{
+
+}
+.img-div{
+    display: flex;
+    justify-content: center;
+}
+
+a{
+    text-decoration: none;
+}
+
+.spacer {
+    border-style: solid;
+    border-width: 5px;
+    height: 400px;
+    margin-top: 25px;
+}
+
