--- a/home.css
+++ b/home.css
@@ -21,14 +21,19 @@ button{
 
 #nav-bar {
     justify-content: space-between;
-    background-color: lightgrey;
+    padding-top: 5px;
+    padding-right: 25px;
+    background-color: brown;
+    color: white;
     height: 50px;
+    font-weight: bold;
 }
 ol{
     list-style-type: none;
     list-style: none;
     display: flex;
     justify-content: space-between;
+    color: whitesmoke;
 }
 ul{
     list-style-type: none;
@@ -53,12 +58,22 @@ p{
 
 a{
     text-decoration: none;
+    color: white;;
 }
 
 .spacer {
-    border-style: solid;
-    border-width: 5px;
+   
     height: 400px;
     margin-top: 25px;
 }
 
+footer{
+    background-color: brown;
+    height: 35px;
+    padding: 5px 15px 15px 0px;
+    margin-top: 5px;
+}
+
+img {
+    margin-top: 15px;
+}
